<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mahri.loginestudo.TelaMenu">

    <Button
        android:text="@string/lbl_cadastrar_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNovoItem"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnTelaInicial"
        android:layout_alignEnd="@+id/btnTelaInicial"
        android:id="@+id/btnEditarPerfil"
        android:layout_below="@+id/btnTelaInicial"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:text="@string/lbl_editar_perfil" />

    <Button
        android:text="@string/lbl_achados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEditarPerfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnAchados"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <Button
        android:text="@string/lbl_ajuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAjuda"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:layout_below="@+id/btnSobreNos"
        android:layout_alignLeft="@+id/btnTelaInicial"
        android:layout_alignStart="@+id/btnTelaInicial" />

    <Button
        android:text="@string/lbl_tela_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnTelaInicial"
        android:theme="@style/AppTheme"
        android:elevation="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:layout_below="@+id/btnNovoItem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/lbl_sobre_nos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSobreNos"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:layout_below="@+id/btnMeusItens"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Meus itens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnMeusItens"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:layout_below="@+id/btnAchados"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Sair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSair"
        android:layout_below="@+id/btnAjuda"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

</RelativeLayout>
