<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/lbl_perdidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_perdidos"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignRight="@+id/lbl_achado"
        android:layout_alignEnd="@+id/lbl_achado" />

    <Button
        android:text="Mapa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/button3"
        android:layout_below="@+id/lbl_perdidos" />

    <TextView
        android:text="@string/lbl_achados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:id="@+id/lbl_achado"
        android:layout_above="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="19dp"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_mapmode"
        android:layout_marginTop="27dp"
        android:id="@+id/imageView4"
        android:layout_below="@+id/imageView3"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />

    <Button
        android:text="Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4" />

    <Button
        android:text="@string/lbl_novo_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:id="@+id/btnNovoItem"
        android:layout_alignTop="@+id/lbl_achado"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>